--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cassino Viper</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <a href="index.html" class="logo">Cassino Viper</a>
+            <ul>
+                <li><a href="login.html">Entrar</a></li>
+                <li><a href="register.html">Cadastrar</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <main>
+        <section class="hero">
+            <h1>Bem-vindo ao Cassino Viper</h1>
+            <p>Experiência de jogo única com animações e interatividade.</p>
+            <a href="games.html" class="btn">Jogar Agora</a>
+        </section>
+
+        <section class="games-preview">
+            <h2>Jogos em Destaque</h2>
+            <div class="game-cards">
+                <!-- Cards de jogos -->
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Cassino Viper. Todos os direitos reservados.</p>
+    </footer>
+
+    <script src="js/script.js"></script>
+</body>
+</html>
